# libcudf-examples

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  download_data.py  main.cpp  main.cu
cmake/Modules/: FindCUDF.cmake
conda/: cudf_dev_cuda10.2.yml  cudf_ex_cuda10.2.yml
cpp/: CMakeLists.txt
cpp/include/: MMToInchesKernel.cu
cpp/src/: MMToInchesKernel.cu  main.cpp  main.cu
cython/: README.md  kernel.pyx  setup.py  setup_backup.py
cython/src/: kernel.cu  kernel_wrapper.cu  kernel_wrapper.hh
data/: download_data.py
examples/: 01_pythontocuda.py
python/: setup.cfg  setup.py  versioneer.py
python/customcuda/: __init__.py  _version.py  kernel.py
python/customcuda/utils/: __init__.py  docutils.py
